c/src/test/resources/c/nec_inline_bnc/valid/ex16-4.ctrl
<controlFile>
  <sourceFile name="../ex16.c" id="1" />
  <run>
    <startPosition fileId="1" line="20" />
    <wayPoint fileId="1" line="22">
      <function funcName="foo">
        <wayPoint fileId="1" line="8" />
      </function>
    </wayPoint>
    <wayPoint fileId="1" line="24">
      <function funcName="foo">
        <wayPoint fileId="1" line="17" />
      </function>
    </wayPoint>
    <wayPoint fileId="1" line="26">
      <function funcName="foo">
        <wayPoint fileId="1" line="10" >
          <loop iterTimes="4" >
            <wayPoint fileId="1" line="12" />
          </loop>
        </wayPoint>
      </function>
    </wayPoint>
    <endPosition fileId="1" line="33" />
  </run>
</controlFile>