c/src/test/resources/c/nec_inline_bnc/invalid/ex30.ctrl
<controlFile>
  <sourceFile name="../ex30.c" id="1" />
  <run>
    <startPosition fileId="1" line="28" />
    <wayPoint fileId="1" line="38" >
      <function funcName="foo" >
        <wayPoint fileId="1" line="21" >
          <loop iterTimes="100" />
        </wayPoint>
      </function>
    </wayPoint>
    <wayPoint fileId="1" line="42" >
      <function funcName="bar" >
        <wayPoint fileId="1" line="10" >
          <loop iterTimes="100" />
        </wayPoint>
      </function>
    </wayPoint>
    <endPosition fileId="1" line="44" />
  </run>
</controlFile>